# word_salad

./: .gitignore  Cargo.toml  cargo1.toml  cspell.json  daily.tsv  index.html  manifest.json  netlify.toml  package-lock.json  package.json  styles.css  tasks.md  trunk.toml
grid_finder/: Cargo.toml
grid_finder/.cargo/: config.toml
grid_finder/data/: animals.txt  series_a.txt
grid_finder/output/: Colors.txt.txt  animals.txt.txt
grid_finder/src/: Colors.txt  Sports.txt  cluster_ordering.rs  clustering.rs  combinations.rs  grid_creator.rs  main.rs  node.rs  obvious.rs  orientation.rs  planets.txt  search.rs  word_layout.rs  word_set.rs
grid_finder/src/snapshots/: grid_finder__clustering__test__clustering.snap  grid_finder__clustering__test__clustering.snap.new
netlify/functions/image/: Cargo.toml
netlify/functions/image/src/: main.rs
netlify/functions/image/src/snapshots/: image__tests__game_image_Sk5FSU1BTFpSWUlaVFRESwlCZW5uZXQgU2lzdGVycwlKYW5lCUtpdHR5CUxpenppZQlMeWRpYQlNYXJ5_512_512.snap  image__tests__image_1_512_512.snap  image__tests__image_2_512_512.snap  image__tests__image_3_512_512.snap
ws_core/: Cargo.toml
ws_core/benches/: iai_benchmark.rs  my_benchmark.rs
ws_core/src/: background_type.rs  character.rs  colors.rs  complete_solve.rs  designed_level.rs  display_word.rs  font_icons.rs  insets.rs  layout.rs  level_trait.rs  level_type.rs  levels.tsv  lib.rs  word.rs  word_trait.rs
ws_core/src/finder/: cluster.rs  cluster_ordering.rs  counter.rs  falling_probability.rs  helpers.rs  level_trait.rs  mod.rs  node.rs  orientation.rs  partial_grid.rs  taboo.txt  word_trait.rs
ws_core/src/layout/: flex.rs  layout_sizing.rs  layout_structure.rs  mod.rs  rect.rs  spacing.rs
ws_core/src/layout/entities/: congrats_layout_entity.rs  consts.rs  game_layout_entity.rs  hints_remaining_layout.rs  layout_animated_tile.rs  layout_grid_tile.rs  layout_text_item.rs  layout_top_bar.rs  layout_top_bar_button.rs  layout_word_tile.rs  level_info_entity.rs  menu_buttons_layout.rs  mod.rs  non_level_layout_entity.rs  recording_button.rs  timer_layout_entity.rs  word_salad_logo.rs
ws_game/: Cargo.toml  android.html  android_purchase.js  capacitor.config.json  daily.tsv  generate_assets.sh  index.html  ios.html  ios_purchase.js  manifest.json  purchase.js  robots.txt  sitemap.txt  styles.css  video.js
ws_game/android/: capacitor.settings.gradle  variables.gradle
ws_game/android/app/: build.gradle  capacitor.build.gradle
ws_game/android/app/src/main/: AndroidManifest.xml
ws_game/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
ws_game/android/app/src/main/res/drawable-anydpi/: ic_action_name.xml
ws_game/android/app/src/main/res/drawable-anydpi-v24/: notification_icon.xml
ws_game/android/app/src/main/res/values/: colors.xml  (+2 more)
ws_game/icon/: inkscape_export.sh
ws_game/ios/App/: Podfile
ws_game/ios/App/App/: App.entitlements  Info.plist
ws_game/ios/App/App.xcodeproj/: project.pbxproj
ws_game/plugins/: import-map.json
ws_game/plugins/@capacitor/: haptics.js
ws_game/plugins/@capacitor-community/: admob.js
ws_game/plugins/@capgo/: capacitor-screen-recorder.js
ws_game/plugins/common/: index-f8ccf602.js  web-aa64eed2.js  web-c8efcf99.js  web-c9173303.js
ws_game/src/: achievements.rs  ads.rs  animated_solutions.rs  background.rs  button.rs  button_node.rs  chosen_state.rs  clear_color.rs  completion.rs  congrats_view.rs  constants.rs  current_level.rs  daily_challenge.rs  designed_level.rs  game_grid_view.rs  grid_input.rs  haptics.rs  hints_view.rs  input.rs  level_time.rs  levels.tsv  logging.rs  main.rs  menu.rs  motion_blur.rs  notifications.rs  platform_specific.rs  popup.rs  purchases.rs  rounding.rs  scheduled_component.rs  shapes.rs  startup.rs  state.rs  streak.rs  test_res_mut.rs  text_2d_node.rs  top_bar_view.rs  tutorial.rs  ui_view.rs  (+5 more)
ws_game/src/levels/: daily_challenge.tsv  tutorial.tsv
ws_game/src/levels/global_location/: eu_capitals.tsv  eu_contries.tsv
ws_game/src/levels/history_and_mythology/: greek_gods.tsv  us_presidents.tsv
ws_game/src/menu_layout/: hints_menu_layout.rs  level_group_layout.rs  level_group_store_layout.rs  levels_menu_layout.rs  main_menu_back_button.rs  main_menu_layout.rs  mod.rs  settings_menu_layout.rs  store_menu_layout.rs  word_salad_menu_layout.rs
ws_game/src/view/: background.rs  congrats.rs  fireworks.rs  game_grid.rs  hints.rs  level_extra_info.rs  level_name.rs  level_theme.rs  logo.rs  menu.rs  mod.rs  non_level.rs  popup.rs  recording_button.rs  selfie_popup.rs  theme_view.rs  timer.rs  top_bar.rs  tutorial.rs  wordline.rs  words.rs
ws_levels/: Cargo.toml
ws_levels/src/: all_levels.rs  level_group.rs  level_sequence.rs  lib.rs
ws_levels/src/levels/: daily_challenge.tsv  tutorial.tsv
ws_levels/src/levels/US Sports/: MLB Teams.tsv  NBA Teams.tsv  NFL Teams.tsv  NHL Teams.tsv
ws_levels/src/levels/geography/: african_countries.tsv  european_capitals.tsv  european_countries.tsv  middle_eastern_capitals.tsv  middle_eastern_countries.tsv  south_and_east_asian_capitals.tsv  south_and_east_asian_countries.tsv  us_states.tsv
ws_levels/src/levels/global_location/: eu_capitals.tsv  eu_countries.tsv  us_states.tsv
ws_levels/src/levels/history_and_mythology/: egyptian_gods.tsv  famous_queens.tsv  greek_gods.tsv  roman_gods.tsv  us_presidents.tsv
ws_levels/src/levels/natural_world/: birds.tsv  elements.tsv  fruit.tsv  gemstones.tsv  insects.tsv  mammals.tsv  reptiles and amphibians.tsv  vegetables.tsv
ws_levels/src/levels/science/: elements.tsv  fruit.tsv  gemstones.tsv  insects.tsv  scientists.tsv  vegetables.tsv
ws_levels/src/snapshots/: ws_levels__all_levels__tests__daily_challenge_data.snap  ws_levels__all_levels__tests__sequence_clustering.snap
ws_web/: Cargo.toml  index.html  package.json
ws_web/.well-known/: apple-app-site-association  assetlinks.json
ws_web/plugins/: capacitor-rate-app.js
ws_web/plugins/@openforge/: capacitor-game-connect.js
ws_web/plugins/common/: web-41748ef3.js  web-acc28c5b.js
ws_web/src/: ads.rs  main.rs  purchases.rs  recording.rs
(+127 files in other folders)
