[workspace]
members = [
"ws_core",
"ws_game",
"grid_finder",
"sheet_reader"
]
default-members = ["ws_game"]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1

[profile.release]
debug = false
opt-level = 'z'
codegen-units = 1
lto = 'thin'
strip = "debuginfo"
#panic = 'abort'
