[workspace]
members = [
    "ws_core",
    "ws_game",
    "ws_levels",
    "grid_finder",
    "sheet_reader",
    "achievement_icons",
    "netlify/functions/image",
]
default-members = ["ws_game"]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1

[profile.release]
debug = false
opt-level = 'z'
codegen-units = 1
lto = 'thin' #todo fat
strip = "symbols"
panic = 'abort'


[profile.release.package.grid_finder]
debug = false
opt-level = 3
codegen-units = 1
