[package]
name = "grid_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws_core = { path = "../ws_core" }
rand = "0.8.5"
itertools = "0.11"
strum = { version = "0.25", features = ["derive"] }
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1"
base64 = "0.21"
geometrid = { version = "0.4", features = ["glam", "serde"] }
