[package]
name = "grid_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws_core = { path = "../ws_core" }
rand = "0.8.5"
itertools = "0.12"
strum = { version = "0.25", features = ["derive"] }
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1"
base64 = "0.21"
geometrid = { git = "https://github.com/wainwrightmark/geometrid", features = ["glam", "serde"] }
log = "0.4.20"
env_logger = "0.11"

lazy_static = "1.4.0"
clap = { version = "4.4.7", features = ["derive"] }
rayon = "1.8.0"
# sled = "0.34.7"
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
const_sized_bit_set = { git = "https://github.com/wainwrightmark/const_sized_bit_set" }
hashbrown = { version = "0.14", features = ["rayon"] }

[dev-dependencies]
test-case = "3.2.1"
insta = "1"