[package]
name = "ws_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.12"
strum = { version = "0.25", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1"
base64 = "0.21"
geometrid = { git = "https://github.com/wainwrightmark/geometrid", features = ["glam", "serde"] }
glam = "0.24"
prime_bag = { version = "0.2.0"}
serde_with = "3"
lazy_static = "1.4"
serde_yaml = "0.9"
serde_repr = "0.1"
enumset = { version = "1", features = ["serde"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.4"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
log = "0.4.20"
ustr = {version = "1.0", features = ["serde"]}
const_sized_bit_set ={git="https://github.com/wainwrightmark/const_sized_bit_set"}
static_assertions = "1.1.0"


[dev-dependencies]
insta = "1"
test-case = "3"
criterion = "0.5"
iai-callgrind = "0.10.0"


[[bench]]
name = "criterion_benchmark"
harness = false

[[bench]]
name = "iai_benchmark"
harness = false