[package]
name = "ws_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws_core = { path = "../ws_core" }
ws_levels = { path = "../ws_levels" }
rand = "0.8.5"
itertools = "0.12"
# bevy_prototype_lyon = { version = "0.10" }
strum = { version = "0.25", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
bevy_pkv = { version = "0.9" }
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1"
base64 = "0.21"
geometrid = { version = "0.6", features = ["glam", "serde"] }
serde_with = "3"
# bevy_embedded_assets = "0.8"
lazy_static = "1.4"
serde_yaml = "0.9"
maveric = { git = 'https://github.com/wainwrightmark/maveric', features = [
  "widgets",
  "derive",
] }
nice_bevy_utils = { git = "https://github.com/wainwrightmark/nice_bevy_utils", features = [
  "async-channel",
  "bevy_pkv",
  "bevy_ui",
] }
serde_repr = "0.1"
enumset = { version = "1", features = ["serde"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
bevy_embedded_assets = "0.9"
wasm-bindgen-futures = "0.4.38"
serde-wasm-bindgen = "0.6.1"
num-traits = "0.2"
bevy_smud = { git = "https://github.com/wainwrightmark/bevy_smud/", branch = "params" }
bitfield-struct = "0.5.5"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
capacitor_bindings = { version = "0.10.0", features = [
  "game_plugin",
  "rate_plugin",
] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  'Url',
  'Window',
  'Location',
  'UrlSearchParams',

  'Navigator',
  'ShareData',
] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = "0.2.1"


[dev-dependencies]
insta = "1"
test-case = "3"


[dependencies.bevy]
version = "0.12"


# Disable the default features if there are any that you do not want
default-features = false
features = [
  "bevy_winit",         # Window management
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Higher-level rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering
  # "bevy_ui",            # UI toolkit
  "webgl2",
  # "bevy_gizmos",
  # "png"
]

[features]
steam = ["reqwest/native-tls"]
web = ["capacitor_bindings/web"]
android = ["capacitor_bindings/android"]
ios = ["capacitor_bindings/ios"]
