[package]
name = "ws_web"
version = "0.1.0"
edition = "2021"


[dependencies]
ws_common = { path = "../ws_common", features = ["web"] }
bevy = { version = "0.13", default_features = false, features = [
    "bevy_winit",         # Window management
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_text",          # Text/font rendering
    # "bevy_ui",            # UI toolkit
    "webgl2",
    # "bevy_gizmos",
    "png",
] }

ws_core = { path = "../ws_core" }
ws_levels = { path = "../ws_levels" }
rand = "0.8.5"
itertools = "0.12"
strum = { version = "0.26", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
bevy_pkv = "0.10"
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1"
base64 = "0.22"
geometrid = { git = "https://github.com/wainwrightmark/geometrid", features = [
    "glam",
    "serde",
] }
serde_with = "3"
capacitor_bindings = { git = "https://github.com/wainwrightmark/capacitor_bindings", features = [
    "game_plugin",
    "rate_plugin",
    "admob_plugin",
    "web",
] }
lazy_static = "1.4"
serde_yaml = "0.9"
maveric = { git = 'https://github.com/wainwrightmark/maveric', features = [
    "widgets",
    "derive",
    "tracing",
    "bevy_text",
] }
nice_bevy_utils = { git = "https://github.com/wainwrightmark/nice_bevy_utils", features = [

    "bevy_pkv",
] }
serde_repr = "0.1"
enumset = { version = "1", features = ["serde"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
wasm-bindgen-futures = "0.4.38"
serde-wasm-bindgen = "0.6.1"
num-traits = "0.2"
bevy_param_shaders = { git = "https://github.com/wainwrightmark/bevy_param_shaders/" }
bitfield-struct = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
fixedbitset = { version = "0.5", features = ["serde"] }
fmtastic = "0.2.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    'Url',
    'Window',
    'Location',
    'UrlSearchParams',

    'Navigator',
] }
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = "0.2.3"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "native-tls",
] }


[dev-dependencies]
insta = "1"
test-case = "3"
bevy = { version = "0.13", default_features = false, features = [
    "bevy_winit",         # Window management
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_text",          # Text/font rendering
    # "bevy_ui",            # UI toolkit
    "webgl2",
    "x11",
    # "bevy_gizmos",
    "png",
] }

[features]
