[package]
edition = "2021"
name = "image"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = {version = "0.9", features = ["apigw_http"]}
lambda_runtime = "0.9"
tokio = {version= "1", default-features=false}
resvg = { version = "0.38", default-features = false, features=["text"] }
ws_core = { path = "../../../ws_core" }
base64 = "0.21.7"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[dev-dependencies]
insta = "1.29.0"
ntest = "0.9.0"

