[package]
edition = "2021"
name = "image"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = {version= "0.10", default-features=false, features=["apigw"]}
lambda_runtime = {version= "0.8", default-features=false}
tokio = {version= "1", default-features=false}
resvg = { version = "0.38", default-features = false, features=["text"] }
ws_core = { path = "../../../ws_core" }
base64 = "0.21.7"

[dev-dependencies]
insta = "1.29.0"
ntest = "0.9.0"

